Finally fixed bottom spacing on resume page

--- a/styles.css
+++ b/styles.css
@@ -86,6 +86,7 @@ header h1 {
     padding: 20px;
     box-sizing: border-box;
     overflow-y: auto;
+    flex-direction: column;
 }
 
 .tabs {
@@ -144,7 +145,6 @@ header h1 {
 
 .tab-content.active {
     display:block;
-    margin-bottom: 20px;
 }
 
 section {
